--- a/web/package.json
+++ b/web/package.json
@@ -52,10 +52,13 @@
     "@redux-devtools/instrument": "^2.1.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "csstype": "^2.6.21",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.1",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.9.4",
-    "vite": "^4.5.2"
+    "vite": "^4.0.0"
   }
 }
